--- a/index.html
+++ b/index.html
@@ -32,16 +32,27 @@
         <div id="boston">
             <span class="bg-secondary text-white p-1 fs-6 text-uppercase fw-bold my-2">Projeto Boston</span>
             <p class="fs-5 my-5">Prevendo o valor de preços de imóveis da cidade de Boston - EUA</p>
-            
-            <p class="fs-5 my-5">Os dados foram adquiridos no repositório do <span><a href="https://www.kaggle.com/datasets/schirmerchad/bostonhoustingmlnd?select=housing.csv"> kaggle </a></span></p>
+
+            <p class="fs-5 my-5">Os dados foram adquiridos no repositório do <span><a
+                        href="https://www.kaggle.com/datasets/schirmerchad/bostonhoustingmlnd?select=housing.csv">
+                        kaggle </a></span></p>
 
             <article>
                 <h4> Extração dos Dados </h4>
-                <p class="fs-5 my-5"> A figura abaixo descreve como foi executado o comando para apresentação dos dados contido no arquivo de formato <code> CSV </code>.</p>
-                <img src="/boston/docs/carregando_dataset.png" alt="png_boston_dataframe" width="auto" height="420" class="">
+                <p class="fs-5 my-5"> A figura abaixo descreve como foi executado o comando para apresentação dos dados
+                    contido no arquivo de formato <code> CSV </code>.</p>
+                <img src="/boston/docs/carregando_dataset.png" alt="png_boston_dataframe_charge" width="auto" height="420"
+                    class="">
+            </article>
+
+            <article>
+                <h4> Descrição dos Dados </h4>
+                <p class="fs-5 my-5"> A figura abaixo apresenta a descrição dos dados. Inicialmente temos 4 colunas e 489 linhas.</p>
+                <img src="/boston/docs/descricao_do_dataset.png" alt="png_boston_dataframe_describe" width="auto" height="420"
+                    class="">
             </article>
         </div>
-        
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
